--- a/package.json
+++ b/package.json
@@ -15,34 +15,34 @@
     "@supabase/supabase-js": "^2.26.0",
     "@tanstack/react-query": "^4.29.15",
     "date-fns": "^2.30.0",
-    "expo": "^52.0.0",
-    "expo-auth-session": "~5.2.0",
-    "expo-constants": "^17.0.8",
-    "expo-dev-client": "~5.0.19",
-    "expo-image-picker": "~15.0.0",
-    "expo-linking": "~6.2.0",
-    "expo-notifications": "~0.27.0",
-    "expo-secure-store": "~12.8.0",
-    "expo-status-bar": "~1.11.0",
-    "expo-web-browser": "~13.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "expo": "53.0.0-preview.7",
+    "expo-auth-session": "~5.5.0",
+    "expo-constants": "~16.0.1",
+    "expo-dev-client": "~4.0.18",
+    "expo-image-picker": "~15.0.5",
+    "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.9",
+    "expo-secure-store": "~13.0.1",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
+    "react": "19.0.0-rc.0",
+    "react-dom": "19.0.0-rc.0",
+    "react-native": "0.78.0",
     "react-native-calendars": "^1.1299.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.0",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "styled-components": "^6.0.1",
     "zustand": "^4.3.8",
-    "@expo/metro-runtime": "~4.0.1"
+    "@expo/metro-runtime": "~3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@expo/ngrok": "^4.1.3",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "typescript": "^5.3.0"
   },
   "private": true
