--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -304,13 +304,19 @@ s3_access_key = "env(S3_ACCESS_KEY)"
 # Configures AWS_SECRET_ACCESS_KEY for S3 bucket
 s3_secret_key = "env(S3_SECRET_KEY)"
 
-[functions.create-developer-profile]
-enabled = true
-verify_jwt = true
-import_map = "./functions/create-developer-profile/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
-entrypoint = "./functions/create-developer-profile/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/create-developer-profile/*.html" ]
+# Set default function settings (applies to all functions unless overridden)
+[functions]
+  # Set this to true if you want to automatically create a JWT for authenticated requests
+  # verify_jwt = true
+
+# # Define settings for a specific function (example)
+# [functions.create-developer-profile]
+# enabled = true
+# verify_jwt = true
+# import_map = "./functions/create-developer-profile/deno.json"
+# # Uncomment to specify a custom file path to the entrypoint.
+# # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+# entrypoint = "./functions/create-developer-profile/index.ts"
+# # Specifies static files to be bundled with the function. Supports glob patterns.
+# # For example, if you want to serve static HTML pages in your function:
+# # static_files = [ "./functions/create-developer-profile/*.html" ]
