--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -30,7 +31,7 @@
     "react": "19.0.0-rc.0",
     "react-dom": "19.0.0-rc.0",
     "react-native": "0.78.0",
-    "react-native-calendars": "^1.1299.0",
+    "react-native-calendars": "^1.1312.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
