--- a/package.json
+++ b/package.json
@@ -9,43 +9,49 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "@react-navigation/stack": "^7.2.10",
-    "@supabase/supabase-js": "^2.26.0",
-    "@tanstack/react-query": "^4.29.15",
+    "@react-navigation/stack": "^6.3.20",
+    "@supabase/supabase-js": "2.49.5-next.1",
+    "@tanstack/react-query": "^5.76.1",
     "date-fns": "^2.30.0",
-    "expo": "53.0.0-preview.7",
-    "expo-auth-session": "~5.5.0",
-    "expo-constants": "~16.0.1",
-    "expo-dev-client": "~4.0.18",
-    "expo-image-picker": "~15.0.5",
-    "expo-linking": "~6.3.1",
-    "expo-notifications": "~0.28.9",
-    "expo-secure-store": "~13.0.1",
-    "expo-status-bar": "~1.12.1",
-    "expo-web-browser": "~13.0.3",
-    "react": "19.0.0-rc.0",
-    "react-dom": "19.0.0-rc.0",
-    "react-native": "0.78.0",
+    "expo": "53.0.9",
+    "expo-auth-session": "~6.1.5",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.1.8",
+    "expo-image-picker": "~16.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.2",
+    "expo-secure-store": "~14.2.3",
+    "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.1.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "^0.20.0",
     "styled-components": "^6.0.1",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@expo/ngrok": "^4.1.3",
-    "@types/react": "~18.2.79",
+    "@types/react": "~19.0.10",
+    "@types/react-dom": "^19.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typescript": "^5.3.0"
   },
   "private": true
