--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "2.49.5-next.1",
     "@tanstack/react-query": "^5.76.1",
+    "axios": "^1.9.0",
     "date-fns": "^2.30.0",
     "expo": "53.0.9",
     "expo-auth-session": "~6.1.5",
