--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.3.20",
-    "@supabase/supabase-js": "2.49.5-next.1",
+    "@supabase/supabase-js": "2.49.5-next.5",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
+    "base64-arraybuffer": "^1.0.2",
     "date-fns": "^2.30.0",
     "expo": "53.0.9",
     "expo-auth-session": "~6.1.5",
