--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -199,6 +199,7 @@ max_frequency = "5s"
 
 # This hook runs before a token is issued and allows you to add additional claims based on the authentication method used.
 # [auth.hook.custom_access_token]
+
 # enabled = true
 # uri = "pg-functions://<database>/<schema>/<hook_name>"
 
@@ -320,3 +321,14 @@ s3_secret_key = "env(S3_SECRET_KEY)"
 # # Specifies static files to be bundled with the function. Supports glob patterns.
 # # For example, if you want to serve static HTML pages in your function:
 # # static_files = [ "./functions/create-developer-profile/*.html" ]
+
+[functions.send-booking-email]
+enabled = true
+verify_jwt = true
+import_map = "./functions/send-booking-email/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/send-booking-email/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/send-booking-email/*.html" ]
