--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "lib": [
       "ESNext"
     ],
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
