--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "styled-components": "^6.0.1",
-    "zustand": "^4.3.8"
+    "zustand": "^4.3.8",
+    "expo-image": "~2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
