--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/bebas-neue": "^0.4.0",
+    "@expo-google-fonts/inter": "^0.4.1",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -24,10 +26,13 @@
     "expo-auth-session": "~6.1.5",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.1.8",
+    "expo-font": "^13.3.1",
+    "expo-image": "~2.3.0",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
     "expo-notifications": "~0.31.2",
     "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "^0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
@@ -42,8 +47,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "styled-components": "^6.0.1",
-    "zustand": "^4.3.8",
-    "expo-image": "~2.3.0"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
