--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "styled-components": "^6.0.1",
-    "zustand": "^4.3.8"
+    "zustand": "^4.3.8",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
